Fix heading on mobile screen

--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -420,12 +420,12 @@ img {
 }
 @media (max-width: 768px) {
   .hero-heading {
-    font-size: 3rem;
-    letter-spacing: 1px;
+    font-size: 2rem;
+    letter-spacing: 0;
   }
 
   .hero-paragraph {
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 
   .about-grid {
@@ -463,10 +463,11 @@ img {
 
 @media (max-width: 576px) {
   .hero-heading {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
   .hero-paragraph {
-    font-size: 1.5rem;
+    font-size: 1rem;
+    letter-spacing: 0;
   }
 }
